Ahora se muestra la lista de las latas en /

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,17 @@
     <ul id="latas-list">
         <!-- Aquí se cargarán las latas dinámicamente -->
     </ul>
-    <script src="{{ url_for('static', filename='js/scripts.js') }}"></script>
+
+    <h2>Agregar Nueva Lata</h2>
+    <form action="/agregar_lata" method="POST">
+        <label for="tamanio">Tamaño:</label>
+        <input type="text" id="tamanio" name="tamanio" required><br><br>
+
+        <label for="precio">Precio:</label>
+        <input type="text" id="precio" name="precio" required><br><br>
+
+        <button type="submit">Agregar Lata</button>
+    </form>
+    <script src="static/js/script.js"></script>
 </body>
 </html>
