--- a/templates/latas.html
+++ b/templates/latas.html
@@ -6,13 +6,28 @@
     <title>Latas de {{ marca.nombre }}</title>
 </head>
 <body>
-    <h1>Latas de {{ marca.nombre }}</h1>
+    <h1>Latas de la Marca {{ marca.nombre }}</h1>
 
-    <!-- Lista de Latas -->
-    <ul id="latas-list">
+    <h2>Agregar Nueva Lata</h2>
+    <form action="/agregar_lata" method="POST">
+        <input type="hidden" id="marca_id" name="marca_id" value="{{ marca.id }}">
+        <label for="tamanio">Tamaño (L):</label>
+        <input type="number" id="tamanio" name="tamanio" required><br>
+
+        <label for="nombre_color">Nombre del Color:</label>
+        <input type="text" id="nombre_color" name="nombre_color" required><br>
+
+        <button type="submit">Agregar Lata</button>
+    </form>
+
+
+    <ul>
         {% for lata in latas %}
-            <li>{{ lata.tamanio }} ml - Precio: ${{ lata.precio }}</li>
+            <li>Tamaño: {{ lata.tamanio }}L - Precio: ${{ lata.precio }} - Color: {{ lata.color.nombre }}</li>
         {% endfor %}
     </ul>
+
+    <a href="{{ url_for('home') }}">Volver a la lista de marcas</a>
+
 </body>
 </html>
