--- a/templates/index.html
+++ b/templates/index.html
@@ -6,46 +6,56 @@
     <title>Inventario de Pinturera</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
-<body data-bs-theme="dark">
+<body data-bs-theme="light">
     <div class="container">
         <div class="row">
-            <div class="col">
+            <div class="col"></div>
                 <h1>Inventario de Pinturería</h1>
                 <div class="col-12 col-md-10 col-lg-6 mx-auto">
-                    <h2>Agregar Marca</h2>
-                    <form action="/agregar_marca" method="POST">
-                        <div class="mb-3">
-                            <label for="nombre" class="form-label">Nombre de la Marca</label>
-                            <input type="text" id="nombre" name="nombre" required>
+                    <h2>Marcas:</h2>
+                    <ul id="marcas-list">
+                    {% for marca in marcas %}
+                    <li>
+                        <a href="{{ url_for('mostrar_latas', marca_id=marca.id) }}">{{ marca.nombre }} - ${{ marca.precio_x_litro }} x litro</a>
+                    </li>
+                        {% endfor %}
+                     </ul>
+                </div>
+                <div>
+                    <!-- Formulario para agregar una marca -->
+                    <div class="card">
+                        <div class="card-body">
+                            <h3>Agregar Marca</h3>
+                            <form action="/agregar_marca" method="POST">
+                                <div class="mb-3">
+                                    <label for="nombre" class="form-label">Nombre de la Marca</label>
+                                    <input type="text" id="nombre" name="nombre"required>
+                                </div>
+                                <div class="mb-3">
+                                    <label for="precio_x_litro" class="form-label">Precio por Litro</label>
+                                    <input type="text" id="precio_x_litro" name="precio_x_litro" required>
+                                </div>
+                                <button type="submit">Agregar Marca</button>
+                            </form>
                         </div>
-                        <div class="mb-3">
-                            <label for="precio_x_litro" class="form-label">Precio por Litro</label>
-                            <input type="text" id="precio_x_litro" name="precio_x_litro" required>
+                    </div>
+                    <!-- Formulario para eliminar una marca -->
+                    <div class="card">
+                        <div class="card-body">
+                        <h3>Eliminar Marca</h3>
+                        <form action="/eliminar_marca" method="POST">
+                            <div class="mb-3">
+                                <label for="eliminar-nombre" class="form-label">Nombre de la Marca a Eliminar</label>
+                                <input type="text" id="eliminar-nombre" name="eliminar-nombre" required>
+                            </div>
+                            <button type="submit">Eliminar Marca</button>
+                        </form>
                         </div>
-                        <button type="submit">Agregar Marca</button>
-                    </form>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-        <!-- Formulario para eliminar una marca -->
-        <form action="/eliminar_marca" method="POST">
-            <label for="delete-nombre">Nombre de la Marca a Eliminar:</label>
-            <input type="text" id="delete-nombre" name="nombre" required><br>
-    
-            <button type="submit">Eliminar Marca</button>
-        </form>
-    
-        <ul id="marcas-list">
-            {% for marca in marcas %}
-                <li>
-                    <a href="{{ url_for('mostrar_latas', marca_id=marca.id) }}">{{ marca.nombre }} - ${{ marca.precio_x_litro }} x litro</a>
-                </li>
-            {% endfor %}
-        </ul>
-
-
     <script src="static/js/script.js"></script>
-
 </body>
 </html>
