--- a/templates/latas.html
+++ b/templates/latas.html
@@ -4,30 +4,48 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Latas de {{ marca.nombre }}</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
-<body>
-    <h1>Latas de la Marca {{ marca.nombre }}</h1>
-
-    <h2>Agregar Nueva Lata</h2>
-    <form action="/agregar_lata" method="POST">
-        <input type="hidden" id="marca_id" name="marca_id" value="{{ marca.id }}">
-        <label for="tamanio">Tamaño (L):</label>
-        <input type="number" id="tamanio" name="tamanio" required><br>
-
-        <label for="nombre_color">Nombre del Color:</label>
-        <input type="text" id="nombre_color" name="nombre_color" required><br>
-
-        <button type="submit">Agregar Lata</button>
-    </form>
-    
-    <h2>Eliminar Lata por Numero</h1>
-    <form action="/eliminar_lata" method="POST">
-        <label for="lata_id">Nro de la lata a eliminar:</label>
-        <input type="number" id="lata_id" name="lata_id" required><br>
-
-        <button type="submit">Eliminar Lata</button>
-    </form>
-
+<body data-bs-theme="light">
+    <div class="container">
+        <div class="row">
+            <div class="col"></div>
+                <h1>Latas de la Marca {{ marca.nombre }}</h1>
+                <div class="col-12 col-md-10 col-lg-6 mx-auto">
+                    <div class="card">
+                        <div class="card-body">
+                            <!-- Formulario para agregar una lata -->
+                            <h3>Agregar Nueva Lata</h3>
+                            <form action="/agregar_lata" method="POST">
+                                <div class="mb-3">
+                                    <input type="hidden" id="marca_id" name="marca_id" value="{{ marca.id }}">
+                                    <label for="tamanio" class="form-label">Tamaño</label>
+                                    <input type="number" id="tamanio" name="tamanio" placeholder="Ingrese valor en litros"required>
+                                </div>
+                                <div class="mb-3">
+                                    <label for="nombre_color" class="form-label">Nombre del Color</label>
+                                    <input type="text" id="nombre_color" name="nombre_color" required>
+                                </div>
+                                <button type="submit">Agregar Lata</button>
+                            </form>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-body">
+                            <!-- Formulario para eliminar una lata por numero -->
+                            <h3>Eliminar Lata por Numero</h3>
+                            <form action="/eliminar_lata" method="POST">
+                                <div class="mb-3">
+                                    <label for="lata_id" class="form-label">Nro de la lata a eliminar:</label>
+                                    <input type="number" id="lata_id" name="lata_id"required>
+                                </div>
+                                <button type="submit">Eliminar Lata</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+        </div>
+    </div>
     <ul>
         {% for lata in latas %}
             <li>Nro de lata: {{lata.id}} - Tamaño: {{ lata.tamanio }}L - Precio: ${{ lata.precio }} - Color: {{ lata.color.nombre }}</li>
