--- a/templates/index.html
+++ b/templates/index.html
@@ -4,14 +4,87 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inventario de Pinturera</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
-<body data-bs-theme="light">
+<body>
+    <style>
+    #encabezado{
+            background-color:red;
+            padding: 10px;
+            text-align: center;
+        border-bottom: 2px solid #9bc99c;
+    }
+    body{
+        background-color:white;
+        font-family:arial,sans-serif;
+        font-weight: 200;
+    }
+    .editar{
+        display: flex;
+        justify-content: left;
+        align-items: left;
+        margin: 0;
+    }
+    form label{
+        font-weight: bold;
+        display: block;
+    }
+    .formulario{
+        background-color:whitesmoke;
+        width: 80%;
+        max-width: 400px;
+        padding: 20px;
+        border-radius: 10px;
+    }
+    .formulario h3{
+        text-align: center;
+        margin-bottom: 20px;
+    }
+    .formulario label,input,button{
+        display: block;
+        width: 100%;
+        margin-bottom: 10px;
+    }
+    .formulario label{
+        font-weight: bold;
+    }
+    .formulario input{
+        padding: 8px;
+        border: 1px solid white;
+        border-radius: 5px;
+    }
+    .formulario button{
+        background-color: #007bff;
+        color:#fff;
+        border: none;
+        border-radius: 7px;
+        padding: 0.5em;
+        cursor: pointer;
+    }
+    footer{
+        background-color: #333;
+        color:#fff;
+        text-align: center;
+        padding: 10px;
+        position: relative;
+        bottom:0;
+        width: 100%;
+    }   
+    .contacto{
+        text-align: left;
+    }
+    .lugar{
+        text-align: right;
+    }
+    </style>
+
+
+
+
     <div class="container">
         <div class="row">
-            <div class="col"></div>
-                <h1>Inventario de Pinturería</h1>
-                <div class="col-12 col-md-10 col-lg-6 mx-auto">
+            <div class="col">
+                <h1 id="encabezado">Inventario de Pinturería</h1>
+                <div class="editar">
                     <h2>Marcas:</h2>
                     <ul id="marcas-list">
                     {% for marca in marcas %}
@@ -21,8 +94,10 @@
                         {% endfor %}
                      </ul>
                 </div>
+                </div>
                 <div>
                     <!-- Formulario para agregar una marca -->
+                <div class="formulario">
                     <div class="card">
                         <div class="card-body">
                             <h3>Agregar Marca</h3>
@@ -39,7 +114,9 @@
                             </form>
                         </div>
                     </div>
+                </div>
                     <!-- Formulario para eliminar una marca -->
+                <div class="formulario">
                     <div class="card">
                         <div class="card-body">
                         <h3>Eliminar Marca</h3>
@@ -48,14 +125,28 @@
                                 <label for="eliminar-nombre" class="form-label">Nombre de la Marca a Eliminar</label>
                                 <input type="text" id="eliminar-nombre" name="eliminar-nombre" required>
                             </div>
-                            <button type="submit">Eliminar Marca</button>
+                            <button class="button" type="submit">Eliminar Marca</button>
                         </form>
                         </div>
                     </div>
                 </div>
             </div>
+            </div>
         </div>
     </div>
     <script src="static/js/script.js"></script>
+    <footer>
+        <div class="derechos">
+            <p>&copy;2024 Lanus Team. Todos los derechos reservados</p>
+        </div>
+        <div class="contacto">
+            <p>Tel:+54 9 11 58770711</p>
+            <p>Email:sseijas@fi.uba.ar</p>
+            <p>Email:saalvarez@fi.uba.ar</p>
+        </div>
+        <div class="lugar">
+            <p>Av. Paseo Colón 850, C1063 Cdad. Autónoma de Buenos Aires</p>
+        </div>
+    </footer>
 </body>
 </html>
