--- a/templates/latas.html
+++ b/templates/latas.html
@@ -4,23 +4,106 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Latas de {{ marca.nombre }}</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
-<body data-bs-theme="light">
+<body>
+    <style>
+        #encabezado{
+                background-color:red;
+                padding: 10px;
+                text-align: center;
+            border-bottom: 2px solid #9bc99c;
+        }
+        body{
+            background-color:white;
+            font-family:arial,sans-serif;
+            font-weight: 200;
+        }
+        .editar{
+            display: flex;
+            justify-content: left;
+            align-items: left;
+            margin: 0;
+        }
+        form label{
+            font-weight: bold;
+            display: block;
+        }
+        .formulario{
+            background-color:whitesmoke;
+            width: 80%;
+            max-width: 400px;
+            padding: 20px;
+            border-radius: 10px;
+        }
+        .formulario h3{
+            text-align: center;
+            margin-bottom: 20px;
+        }
+        .formulario label,input,button{
+            display: block;
+            width: 100%;
+            margin-bottom: 10px;
+        }
+        .formulario label{
+            font-weight: bold;
+        }
+        .formulario input{
+            padding: 8px;
+            border: 1px solid white;
+            border-radius: 5px;
+        }
+        .formulario button{
+            background-color: #007bff;
+            color:#fff;
+            border: none;
+            border-radius: 7px;
+            padding: 0.5em;
+            cursor: pointer;
+        }
+        footer{
+            background-color: #333;
+            color:#fff;
+            text-align: center;
+            padding: 10px;
+            position: relative;
+            bottom:0;
+            width: 100%;
+        }   
+        .contacto{
+            text-align: left;
+        }
+        .lugar{
+            text-align: right;
+        }
+        </style>
+
+
+
+
+
     <div class="container">
         <div class="row">
             <div class="col"></div>
-                <h1>Latas de la Marca {{ marca.nombre }}</h1>
+                <h1 id="encabezado">Latas de la Marca {{ marca.nombre }}</h1>
                 <div class="col-12 col-md-10 col-lg-6 mx-auto">
+                <div class="editar">
+                    <h2>Latas:</h2>
+                    <ul>
+                        {% for lata in latas %}
+                            <li>Nro de lata: {{lata.id}} - Tamaño: {{ lata.tamanio }}L - Precio: ${{ lata.precio }} - Color: {{ lata.color.nombre }}</li>
+                        {% endfor %}
+                    </ul>
+                </div>
                     <div class="card">
                         <div class="card-body">
                             <!-- Formulario para agregar una lata -->
+                        <div class="formulario">
                             <h3>Agregar Nueva Lata</h3>
                             <form action="/agregar_lata" method="POST">
                                 <div class="mb-3">
                                     <input type="hidden" id="marca_id" name="marca_id" value="{{ marca.id }}">
                                     <label for="tamanio" class="form-label">Tamaño</label>
-                                    <input type="number" id="tamanio" name="tamanio" placeholder="Ingrese valor en litros"required>
+                                    <input type="number" id="tamanio" name="tamanio" placeholder="Ingrese tamaño en litros"required>
                                 </div>
                                 <div class="mb-3">
                                     <label for="nombre_color" class="form-label">Nombre del Color</label>
@@ -29,10 +112,12 @@
                                 <button type="submit">Agregar Lata</button>
                             </form>
                         </div>
+                        </div>
                     </div>
                     <div class="card">
                         <div class="card-body">
                             <!-- Formulario para eliminar una lata por numero -->
+                        <div class="formulario">
                             <h3>Eliminar Lata por Numero</h3>
                             <form action="/eliminar_lata" method="POST">
                                 <div class="mb-3">
@@ -42,17 +127,25 @@
                                 <button type="submit">Eliminar Lata</button>
                             </form>
                         </div>
+                        </div>
                     </div>
                 </div>
         </div>
     </div>
-    <ul>
-        {% for lata in latas %}
-            <li>Nro de lata: {{lata.id}} - Tamaño: {{ lata.tamanio }}L - Precio: ${{ lata.precio }} - Color: {{ lata.color.nombre }}</li>
-        {% endfor %}
-    </ul>
-
     <a href="{{ url_for('home') }}">Volver a la lista de marcas</a>
+    <footer>
+        <div class="derechos">
+            <p>&copy;2024 Lanus Team. Todos los derechos reservados</p>
+        </div>
+        <div class="contacto">
+            <p>Tel:+54 9 11 58770711</p>
+            <p>Email:sseijas@fi.uba.ar</p>
+            <p>Email:saalvarez@fi.uba.ar</p>
+        </div>
+        <div class="lugar">
+            <p>Av. Paseo Colón 850, C1063 Cdad. Autónoma de Buenos Aires</p>
+        </div>
+    </footer>
 
 </body>
 </html>
