Ahora se soluciono que cuando existia una marca que tenia latas asociadas no se podia eliminar, ahora se eliminan todas las latas y luego la marca

--- a/templates/index.html
+++ b/templates/index.html
@@ -123,7 +123,7 @@
                         <form action="/eliminar_marca" method="POST">
                             <div class="mb-3">
                                 <label for="eliminar-nombre" class="form-label">Nombre de la Marca a Eliminar</label>
-                                <input type="text" id="eliminar-nombre" name="eliminar-nombre" required>
+                                <input type="text" id="nombre" name="nombre" required>
                             </div>
                             <button class="button" type="submit">Eliminar Marca</button>
                         </form>
