--- a/templates/latas.html
+++ b/templates/latas.html
@@ -150,7 +150,7 @@
                                     <input type="hidden" id="marca_id" name="marca_id" value="{{ marca.id }}">
                                     <div class="mb-3">
                                         <label for="tamanio" class="form-label">Tamaño</label>
-                                        <input type="number" id="tamanio" name="tamanio" placeholder="Ingrese tamaño en litros" required>
+                                        <input type="number" id="tamanio" name="tamanio" placeholder="Ingrese tamaño en litros" required min="0" step="any">
                                     </div>
                                     <div class="mb-3">
                                         <label for="nombre_color" class="form-label">Nombre del Color</label>
@@ -168,7 +168,7 @@
                                 <form action="/eliminar_lata" method="POST">
                                     <div class="mb-3">
                                         <label for="lata_id" class="form-label">Nro de la lata a eliminar:</label>
-                                        <input type="number" id="lata_id" name="lata_id" required>
+                                        <input type="number" id="lata_id" name="lata_id" required min="1" step="any">
                                     </div>
                                     <button type="submit" class="btn btn-danger">Eliminar Lata</button>
                                 </form>
