--- a/templates/index.html
+++ b/templates/index.html
@@ -171,6 +171,10 @@
                                         <label for="precio_x_litro" class="form-label">Precio por Litro</label>
                                         <input type="number" id="precio_x_litro" name="precio_x_litro" required min="0" step="any" required>
                                     </div>
+                                    <div class="mb-3">
+                                        <label for="imagen_url" class="form-label">URL de la Imagen</label>
+                                        <input type="text" id="imagen_url" name="imagen_url">
+                                    </div>
                                     <button type="submit">Agregar Marca</button>
                                 </form>
                             </div>
@@ -186,6 +190,28 @@
                                         <input type="text" id="nombre" name="nombre" required>
                                     </div>
                                     <button class="button" type="submit">Eliminar Marca</button>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="formulario">
+                        <div class="card">
+                            <div class="card-body">
+                                <h3>Modificar Marca</h3>
+                                <form >
+                                    <div class="mb-3">
+                                        <label for="eliminar-nombre" class="form-label">Nombre de la Marca a modificar</label>
+                                        <input type="text" id="nombre" name="nombre" required>
+                                    </div>
+                                    <div class="mb-3">
+                                        <label for="precio_x_litro" class="form-label">Precio por Litro</label>
+                                        <input type="number" id="precio_x_litro" name="precio_x_litro" required min="0" step="any" required>
+                                    </div>
+                                    <div class="mb-3">
+                                        <label for="imagen_url" class="form-label">URL de la Imagen</label>
+                                        <input type="text" id="imagen_url" name="imagen_url">
+                                    </div>
+                                    <button class="button" type="submit">Modificar Marca</button>
                                 </form>
                             </div>
                         </div>
