--- a/templates/latas.html
+++ b/templates/latas.html
@@ -53,17 +53,34 @@
         .footer {
             background-color: #333;
             color: #ffffff;
-            padding: 20px 0;
-            text-align: center;
-            margin-top: 20px;
+            padding: 10px 0;
+            margin-top: 10px;
         }
 
-        .footer p {
-            margin: 0;
+        .footer .footer-content {
+            display: flex;
+            align-items: center;
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 0 10px;
         }
 
-        .footer .contacto, .footer .lugar, .footer .derechos {
+        .footer .text-content {
+            flex-direction: column;
+        }
+
+        .footer .derechos,
+        .footer .contacto,
+        .footer .lugar {
             margin-bottom: 10px;
+        }
+
+        .footer .logo {
+            margin-left: auto;
+        }
+
+        .footer img {
+            max-width: 1000px;  /* Ajusta el tamaño de la imagen según sea necesario */
         }
 
         .formulario {
@@ -198,17 +215,23 @@
         </div>
     </div>
     <footer class="footer">
-
-        <div class="derechos">
-            <p>&copy;2024 Lanus Team. Todos los derechos reservados</p>
-        </div>
-        <div class="contacto">
-            <p>Tel: +54 9 11 58770711</p>
-            <p>Email: sseijas@fi.uba.ar</p>
-            <p>Email: saalvarez@fi.uba.ar</p>
-        </div>
-        <div class="lugar">
-            <p>Av. Paseo Colón 850, C1063 Cdad. Autónoma de Buenos Aires</p>
+        <div class="footer-content">
+            <div class="text-content">
+                <div class="derechos">
+                    <p>&copy;2024 Lanus Team. Todos los derechos reservados</p>
+                </div>
+                <div class="contacto">
+                    <p>Tel: +54 9 11 58770711</p>
+                    <p>Email: sseijas@fi.uba.ar</p>
+                    <p>Email: saalvarez@fi.uba.ar</p>
+                </div>
+                <div class="lugar">
+                    <p>Av. Paseo Colón 850, C1063 Cdad. Autónoma de Buenos Aires</p>
+                </div>
+            </div>
+            <div class="logo">
+                <img src="static/images/1logo.png" alt="Logo de la empresa">
+            </div>
         </div>
     </footer>
 </body>
