Agrego ruta y metodo al form de editar marca

--- a/templates/index.html
+++ b/templates/index.html
@@ -215,7 +215,7 @@
                         <div class="card">
                             <div class="card-body">
                                 <h3>Modificar Marca</h3>
-                                <form >
+                                <form action="/editar_marca" method="POST">
                                     <div class="mb-3">
                                         <label for="eliminar-nombre" class="form-label">Nombre de la Marca a modificar</label>
                                         <input type="text" id="nombre" name="nombre" required>
