--- a/templates/index.html
+++ b/templates/index.html
@@ -69,7 +69,7 @@
         .footer .footer-content {
             display: flex;
             align-items: center;
-            max-width: 1200px;
+            max-width: 800px;
             margin: 0 auto;
             padding: 0 10px;
         }
@@ -78,10 +78,14 @@
             flex-direction: column;
         }
 
-        .footer .derechos,
+        .footer .derechos{
+            text-align: center;
+            margin-left: 50%;
+        }
         .footer .contacto,
         .footer .lugar {
             margin-bottom: 10px;
+            margin-left:10% ;
         }
 
         .footer .logo {
