--- a/templates/index.html
+++ b/templates/index.html
@@ -36,9 +36,15 @@
             padding: 10px;
             margin-bottom: 10px;
             border-radius: 5px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
         }
 
         .editar ul li a {
+            margin-left: 7%;
+            flex: 1;
+            text-align: center;
             color: #f7f7f7;
             text-decoration: none;
         }
@@ -137,6 +143,7 @@
         }
 
         .btn-secondary {
+            margin-right: 5%;
             display: block;
             width: 100%;
             padding: 10px;
@@ -150,6 +157,17 @@
 
         .btn-secondary:hover {
             background-color: #5a6268;
+        }
+        
+        .editar button{
+            width: auto; /* Ajusta el tamaño del botón según el contenido */
+            padding: 5px 10px;
+            background-color: #e76f60;
+            color: #121212;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 15px;
         }
 
         @media (max-width: 768px) {
@@ -174,6 +192,9 @@
                     {% for marca in marcas %}
                     <li>
                         <a href="{{ url_for('mostrar_latas', marca_id=marca.id) }}">{{ marca.nombre }} - ${{ marca.precio_x_litro }} x litro</a>
+                        <form action="{{ url_for('editar_marca', marca_id=marca.id) }}" method="GET" style="display: inline;">
+                            <button type="submit">Modificar</button>
+                        </form>
                     </li>
                     {% endfor %}
                     </ul>
@@ -211,28 +232,6 @@
                                         <input type="text" id="nombre" name="nombre" required>
                                     </div>
                                     <button class="button" type="submit">Eliminar Marca</button>
-                                </form>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="formulario">
-                        <div class="card">
-                            <div class="card-body">
-                                <h3>Modificar Marca</h3>
-                                <form action="/editar_marca" method="POST">
-                                    <div class="mb-3">
-                                        <label for="eliminar-nombre" class="form-label">Nombre de la Marca a modificar</label>
-                                        <input type="text" id="nombre" name="nombre" required>
-                                    </div>
-                                    <div class="mb-3">
-                                        <label for="precio_x_litro" class="form-label">Precio por Litro</label>
-                                        <input type="number" id="precio_x_litro" name="precio_x_litro" required min="0" step="any" required>
-                                    </div>
-                                    <div class="mb-3">
-                                        <label for="imagen_url" class="form-label">URL de la Imagen</label>
-                                        <input type="text" id="imagen_url" name="imagen_url">
-                                    </div>
-                                    <button class="button" type="submit">Modificar Marca</button>
                                 </form>
                             </div>
                         </div>
