--- a/templates/index.html
+++ b/templates/index.html
@@ -47,6 +47,7 @@
             text-align: center;
             color: #f7f7f7;
             text-decoration: none;
+            font-weight: bold;
         }
 
         .editar ul li a:hover {
